# crfs-rs

./: .gitignore  Cargo.toml  README.md
.builds/: freebsd.yml  openbsd.yml
.github/: dependabot.yml
.github/workflows/: CI.yml  Python.yml
benches/: crf_bench.rs  viterbi_bench.rs
examples/: train_and_tag.rs
python/: Cargo.toml  README.md  crfs.pyi  pyproject.toml
python/src/: lib.rs
src/: attribute.rs  context.rs  crf_context.rs  dataset.rs  dictionary.rs  feature.rs  feature_gen.rs  lib.rs  model.rs  model_writer.rs  tagger.rs  trainer.rs
src/train/: crf_context.rs  dictionary.rs  feature_gen.rs  mod.rs  model_writer.rs  trainer.rs
src/train/trainer/: arow.rs  averaged_perceptron.rs  l2sgd.rs  lbfgs.rs  passive_aggressive.rs
tests/: model.crfsuite  test_ap_algorithm.rs  test_arow_algorithm.rs  test_end_to_end.rs  test_l2sgd_algorithm.rs  test_pa_algorithm.rs  test_param_validation.rs  test_training.rs
