[package]
name = "crfs"
version = "0.1.2"
authors = ["messense <messense@icloud.com>"]
description = "Pure Rust port of CRFsuite: a fast implementation of Conditional Random Fields (CRFs)"
edition = "2018"
license = "MIT"
keywords = ["crf", "crfsuite"]
readme = "README.md"
repository = "https://github.com/messense/crfs-rs"

[[bench]]
name = "crf_bench"
harness = false

[dependencies]
bitflags = "1.2.1"
bstr = "0.2.14"
cqdb = "0.5"

[dev-dependencies]
crfsuite = "0.3.1"
criterion = "0.3.4"
