[package]
name = "crfs"
version = "0.3.0"
authors = ["messense <messense@icloud.com>"]
description = "Pure Rust port of CRFsuite: a fast implementation of Conditional Random Fields (CRFs)"
edition = "2024"
license = "MIT"
keywords = ["crf", "crfsuite"]
readme = "README.md"
repository = "https://github.com/messense/crfs-rs"

[[bench]]
name = "crf_bench"
harness = false

[dependencies]
anyhow = "1.0"
bitflags = "2.10.0"
bstr = "1.0.0"
cqdb = "0.5"
liblbfgs = "0.1"
rand = "0.9"

[dev-dependencies]
crfsuite = "0.3.1"
criterion = "0.8.1"
tempfile = "3"
